--- a/src/app/reminder-message/reminder-message.component.css
+++ b/src/app/reminder-message/reminder-message.component.css
@@ -4,7 +4,7 @@
   display: inline-block;
   width: calc(50% - 10px);
   vertical-align: middle;
-  margin: 0 10px 10px 0;
+  margin: 5px;
 }
 
 @media (max-width: 850px) {  /* var(--mobile-breakpoint) equivalent, just can't use in media queries */
