Cleaned up empty Favorite file returning, and dropdown handling

--- a/src/app/manage-template-dialog/manage-template-dialog.component.html
+++ b/src/app/manage-template-dialog/manage-template-dialog.component.html
@@ -116,6 +116,7 @@
             <div class="indent">
               <label>Time from when Thing is created:&nbsp;</label>
               <p-dropdown [options]="favoriteTimeOptions"
+                          optionLabel="label"
                           appendTo="body"
                           [(ngModel)]="favoriteTimeRange"/>
             </div>
